[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "heimdallsecurity"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "heimdall/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["heimdall"]
include = ["/heimdall", "/heimdall/**/*.yml"]

[project.optional-dependencies]
dev = [
    "tracecat_registry @ git+https://github.com/TracecatHQ/tracecat#subdirectory=registry&egg=tracecat_registry",
]
